--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,7 @@
 # ignore frontend build & node_modules
 /task_manager-frontend/node_modules/
 /task_manager-frontend/build/
+
+# frontend ignores
+/task_manager-frontend/node_modules/
+/task_manager-frontend/build/
